# mcp-shared-memory

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.template  Dockerfile  GLOBAL_CLAUDE.md.example  INSTALL.md  LICENSE  ORCHESTRATION_PLAN.md  README.md  TECHNICAL_OVERVIEW.md  docker-compose.yml  librarian.py  librarian.service  mcp-memory.nginx.conf  mcp-rag-arch.service  mcp-watchdog.service  pyproject.toml  requirements.txt  server.py  setup.sh  start.sh  watchdog.sh
.github/workflows/: ci.yml
contrib/: ORCHESTRATION_PLAN.md  README.md
contrib/backup/: backup-chroma.sh  backup-mongo.sh  sync-to-storm.sh
contrib/launchers/: agents.example.json  launch-agents.ps1
contrib/orchestrator/: brain.py  dispatcher.py
contrib/templates/: AGENT_CLAUDE.md  COORDINATOR_CLAUDE.md
contrib/test/: mcp_stress_harness.py
contrib/ui/: tmux-proxy.py
contrib/ui/static/: index.html  terminal.html
deploy/: AI_INTEGRATION_GUIDE.md  AUTHORIZATION_REQUEST.md  Dockerfile  LICENSE  README.md  WORK_CLAUDE_INSTRUCTIONS.md  docker-compose.yml  install.sh  requirements.txt  server.py  upgrade.sh
docs/: V3_ARCHITECTURE_SPEC.md  WORKED_EXAMPLE.md
orchestrator/: claude-spawn.py
src/shared_memory/: __init__.py  __main__.py  app.py  audit.py  auth.py  clients.py  config.py  dashboard.html  helpers.py  state.py
src/shared_memory/tools/: __init__.py  admin.py  autopilot.py  backlog.py  checklists.py  database.py  functions.py  guidelines.py  (+9 more)
tests/: test_config.py  test_database.py  test_helpers.py  test_state.py  test_tools_import.py
ui/: app.py  tmux-proxy.sh
